# exportbot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  RELEASE_MANIFEST.json  frosty_app.py  funciones.py  package-lock.json  package.json  prompts.py  pyproject.toml  railway.toml  requirements.txt
backend/: config.py  main.py  middleware.py  orquestador.py  requirements-dev.txt  requirements.txt  schemas.py
contracts/: exportbot_v2_contract.json  openapi_v2_baseline.json
docs/: CONTRATO_DE_REGRESION.md  DECISIONES.md  DICCIONARIO_FACT_EXPORTACIONES.md  ESTADO_DEL_PROYECTO.md  FOR_ExportBot_Construccion.md  MODELO_SEMANTICO.md  PLAN_EXPORTBOT_2.md  PLAYBOOK_DESPLIEGUE.md  RUNBOOK.md  VERIFICACION_CORRECCION_NOTEBOOKS_2026-07-19.md  VERIFICACION_PUBLICACION_GITHUB_A05_2026-07-20.md  VERIFICACION_PUBLICACION_GITHUB_A06_2026-07-20.md  VERIFICACION_REDISENO_VISUAL_2026-07-19.md  VERIFICACION_REGRESIONES_Y_GUARDRAILS_2026-07-20.md
eval/: evaluar.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
notebooks/: Lanzar_App_Colab_Cloudflare.ipynb  Publicar_GitHub.ipynb
scripts/: actualizar_contrato_openapi.py  adaptar_notebooks.py  generar_manifiesto.py  playwright_runtime.py  verificar_regresiones.py
semantic/: SV_EXPORTACIONES.sv.yaml  crear_semantic_view.sql  modelo_exportaciones_analyst.yaml  preguntas_doradas.yaml  subir_yaml_a_stage.sql  sv_exportaciones_desplegada_2026-07-23.yaml
sql/: 01_seguridad_roles.sql  (+2 more)
(+45 files in other folders)
