[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exportbot"
version = "2.0.0b2"
description = "ExportBot 2.0 — chatbot NL→SQL de exportaciones de Colombia (FastAPI + Snowflake Cortex Analyst + React). Uso interno · ProColombia."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "ruff>=0.6",
  "playwright==1.57.0",
  "pillow>=10",
]

# El backend usa imports planos (config, main, orquestador, schemas) y cuatro
# paquetes de primer nivel dentro de backend/. La selección explícita evita que
# setuptools intente empaquetar sql/, eval/, frontend/, notebooks/, etc.
[tool.setuptools]
package-dir = {"" = "backend"}
py-modules = ["config", "main", "orquestador", "schemas"]
include-package-data = false

[tool.setuptools.packages.find]
where = ["backend"]
include = ["exportadores*", "motores*", "routers*", "snowflake_*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["frontend", "notebooks", "docs"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
  "e2e: pruebas de navegador y regresión visual (requieren Chromium)",
]

[tool.ruff.lint.isort]
known-first-party = ["config", "schemas", "orquestador", "snowflake_", "motores", "routers", "exportadores", "main"]
